--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,10 @@ body {
   width: 80%;
   margin: 15px auto;
 }
-
+.navbar-shadow{
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  background: #f9f7f7;
+}
 /* laptop only  */
 @media (min-width: 768px) {
 }
@@ -340,8 +343,36 @@ article:has(:hover, :focus) {
 
 .awareness-finance {
   text-align: justify;
+  font-size: 19px;
 }
 
-.awareness{
-  
+.navbar-brand{
+  width: 120px;
+}
+
+.navbar-brand img{
+  width: 100%;
+}
+
+.user-name{
+  font-size: 44px;
+}
+
+
+.navbar-light .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(0, 0, 0, 0.55)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-toggler-icon {
+  display: inline-block;
+  width: 1.5em;
+  height: 1.5em;
+  vertical-align: middle;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100%;
+}
+
+.pg2{
+  text-align: center;
 }
