--- a/css/style.css
+++ b/css/style.css
@@ -465,3 +465,58 @@ article:has(:hover, :focus) {
 .yellow {
   background-color: #ffc435;
 }
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.chat-icon {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+  cursor: pointer;
+  border-radius: 50%;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease;
+}
+
+.chat-icon img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
+.chat-icon:hover {
+  background-color: #13161a;
+}
+
+.custom-modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  right: 20px;
+  bottom: 20px;
+  width: 300px;
+  height: 400px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.modal-content {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+.close {
+  position: absolute;
+  top: 8px;
+  right: 16px;
+  color: #aaa;
+  font-size: 30px;
+  cursor: pointer;
+}
